# a14-3-tp1

./: .gitignore  CMakeLists.txt  Makefile  ProjectHome.md
cmake/: FindDRAMSim.cmake  FindSimSoc.cmake  FindSystemC.cmake  config.cmake
include/arbiter/: arbiter.h
include/noc/: arbiter.h  forward.h  noc.h  packet.h  router.h  traffic_generator.h
include/router/: packet.h  policy.h  router.h
include/traffic/: traffic_generator.h
rapport/: architecture.tex  implementation.tex  methodologie.tex  objectif.tex  rapport_noc.tex  reflexion.tex
scripts/: display_stat_for_mode.m  get_mode_name.m  import.m  import_data.m  import_stat.m  main.m  run_test.sh
src/: CMakeLists.txt  arbiter.cpp  noc.cpp  packet.cpp  router.cpp  traffic_generator.cpp
src/test/: CMakeLists.txt  arbiter.cpp  main.cpp  noc.cpp  packet_tracer.cpp  packet_tracer.h  router.cpp  traffic.cpp
vhdl/: arbiter_fixed.vhd  arbiter_fixed_8.vhd  arbiter_lru.vhd  arbiter_lru_8.vhd  arbiter_rand.vhd  arbiter_rand_8.vhd  arbiter_round.vhd  arbiter_round_8.vhd  arbiters.vhd  fifo.vhd  fifo_stage.vhd  mux_3x1.vhd  noc.vhd  router_1x4.vhd  sw_3x1.vhd  sw_4x1.vhd  sw_8x1.vhd  sw_8x4.vhd  tb_fifo.vhd  tb_noc.vhd  tb_sw_4x1.vhd  tb_traffic.vhd  traffic_acceptor.vhd  traffic_generator.vhd
